objects/LLC_BI__External_Data_Source__c.object
<CustomObject>
    <description>This object connects a matrix to an external data source, which allows a result column to automatically retrieve its values from an external data set.</description>
    <fields>
        <fullName>LLC_BI__Data_Category__c</fullName>
        <description>Users populate this required text field with the dataset that this result column retrieves. By default, it is blank.</description>
        <label>Data Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Data_Source__c</fullName>
        <description>Users populate this required text field to indicate the source of data for the selected data category. By default, it is blank.</description>
        <label>Data Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system populates this required lookup field to associate this record to a parent matrix. By default, it is blank.</description>
        <label>Matrix</label>
        <referenceTo>LLC_BI__Matrix__c</referenceTo>
        <relationshipLabel>External Data Sources</relationshipLabel>
        <relationshipName>External_Data_Sources</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External Data Source</label>
    <nameField>
        <displayFormat>EDS-{00000}</displayFormat>
        <label>External Data Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>